Fix button size on mobile

--- a/public/css/intro-page.css
+++ b/public/css/intro-page.css
@@ -79,3 +79,18 @@ button:hover, a:hover {
     -o-transition: 0.4s;
     transition: 0.4s;
 }
+
+
+/* Media queries for vertical mobile phones -------------------------------- */
+
+@media only screen and (max-width: 450px) {
+    #login-link {
+        width: 250px;
+        margin-top: 15px;
+    }
+
+    #gh-link {
+        width: 250px;
+        height: 48px;
+    }
+}
